--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,15 +1,18 @@
 name: Java CI with Maven
 
-on:[push]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
-  
 jobs:
   build:
 
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
