--- a/.github/workflows/ma.yml
+++ b/.github/workflows/ma.yml
@@ -12,10 +12,10 @@ on:
 jobs:
   build:
 
-    runs-on: Windows-latest
+    runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v1
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
